For the latest news, visit the Linux Cafe at the PegaSoft web site. 

SparForte 1.5's focus was on REST, DB, OpenGL

CHANGES SINCE 1.4

1. New: End of line whitespace check.
